# generative-ai-docs

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  DEMO_MAINTAINERS.md  LICENSE  README.md  optipro
demos/palm/python/docs-agent/: CONTRIBUTING.md  README.md  aqa.py  chroma.py  condition.txt  config.yaml  docs_agent.py  hello_world.py  palm.py  pyproject.toml  run_console.py  setup.py
demos/palm/python/docs-agent/apps_script/: README.md  exportmd.gs  main.gs
demos/palm/python/docs-agent/chatbot/: __init__.py  chatui.py  launch.sh
demos/palm/python/docs-agent/docs/: cli-reference.md  whats-new.md
demos/palm/python/docs-agent/docs_agent/benchmarks/: README.md  benchmarks.yaml
demos/palm/python/docs-agent/docs_agent/interfaces/: README.md  cli.py
demos/palm/python/docs-agent/docs_agent/preprocess/: README.md
demos/palm/python/docs-agent/docs_agent/storage/: google_semantic_retriever.py
demos/palm/python/docs-agent/modules/: chroma.py
demos/palm/python/docs-agent/scripts/: README.md  files_to_plain_text.py  html_splitter.py  markdown_splitter.py  markdown_to_plain_text.py  populate_vector_database.py  read_config.py  test_vector_database.py  tokenCount.py
examples/gemini/python/docs-agent/: README.md  config.yaml  helpme.sh  pylintrc  pyproject.toml  tellme.sh
examples/gemini/python/docs-agent/apps_script/: README.md  drive_to_markdown.gs  exportmd.gs  gmail_to_markdown.gs  helper_functions.gs  main.gs
examples/gemini/python/docs-agent/docs/: chunking-process.md  cli-reference.md  concepts.md  config-reference.md  create-a-new-task.md  whats-new.md
examples/gemini/python/docs-agent/scripts/: autocomplete.sh  create_file_dictionary.py  extract_image_files.py  extract_replace_image_alt_text.py  helpme.sh  update_files_from_yaml.py
examples/gemini/python/docs-agent/tasks/: describe-images-alt-text-no-markdown.yaml  describe-images-and-replace.yaml  describe-images-for-alt-text-task.yaml  describe-images-from-doc-replace.yaml  describe-images-from-doc.yaml  extract-workflows-task.yaml  help-polish-prompts-task.yaml  index-page-generator-task.yaml  prepare-podcast-from-dir.yaml  release-notes-task.yaml  revise-content-structure-task.yaml
(+581 files in other folders)
